--- a/wechat.plist
+++ b/wechat.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://7xq8b0.com1.z0.glb.clouddn.com/wechat.ipa</string>
+					<string>https://raw.githubusercontent.com/bindx/plist/master/wechat.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
